use bandit as submodule

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,4 @@
-CC=clang++ -std=c++11 -stdlib=libc++ -lboost_system-mt -Wfatal-errors -Wall -W -Werror -Wfloat-equal -Wundef -Wendif-labels -I.
+CC=clang++ -std=c++11 -stdlib=libc++ -lboost_system-mt -Wfatal-errors -Wall -W -Werror -Wfloat-equal -Wundef -Wendif-labels -I../external/bandit
 
 all: clean test run
 
