us cereal as seralization engine

--- a/examples/post/Makefile
+++ b/examples/post/Makefile
@@ -1,4 +1,4 @@
-CC=clang++ -std=c++11 -stdlib=libc++ -lboost_system-mt -Wfatal-errors -Wall -W -Werror -Wfloat-equal -Wundef -Wendif-labels -I../../../libentity/include -L../../../libentity/lib -lentity
+CC=clang++ -std=c++11 -stdlib=libc++ -lboost_system-mt -Wfatal-errors -Wall -W -Werror -Wfloat-equal -Wendif-labels -I../../external/ 
 
 all: clean frank
 
